book-network commit